LIST OF CHANGES FOR NPG-QC PACKAGE

 - remove attribute qc_report_dir from check object: the output directory
   is created by default using the sample's filename root
 - npg_qc::autoqc::qc_store - load rna_seqc results into new rna_seqc
   table in npg_qc database.
 - SeqQC:
   - added template for rna_seqc check with selected metrics shown
     in summary
   - include a link to original RNA-SeQC report in check's template
   - Build will fail if no node, npm or bower are available in path
 - stop using multiple versions of samtools
 - do not install NPGQC web app
 - increase HTTP timeout when reporting manual qc outcomes to LIMs

release 62.9
 - fix for GD image generation test in response to a change in constructor
   behaviour in GD.pm
 - compute expected path in tests in a way that takes into account
   substitutions
 - genotype and verify_bam_id checks:
     speed up pipeline job submission for deeply plexed lanes by
     moving calls that involde access to reference repository out of the
     can_run method
 - composition-based autoqc results db search via DBIx: allow for
   a search query that contains fields from the main table

release 62.8
 - tag_sniff modified clip and revcomp options to handle split tags
 - Sort results for merged genotypes as well - to avoid out of order failure.
 - specify an appropriate "accept" header when sending manual qc
   outcomes to LIMs (header was not set resulting in 406 responce
   code)

release 62.7
 - current staging directories do not have autoqc results in
   bustard_path; stop looking there
 - ClearPress Perl library is pinned to v. 473.0.5
 - upstream_tags autoqc check: stop falling back on files in IRODs

release 62.6
 - make building the iRODS handle of npg_qc::autoqc::checks::genotype
   lazy to avoid calling baton until required at runtime
 - translation from a database composition representation to the
     npg_tracking::glossary::composition type object