@@ -2,7 +2,7 @@ use strict;
 use warnings;
 use Cwd;
 use File::Temp qw/ tempdir /;
-use Test::More tests => 11;
+use Test::More tests => 12;
 use Test::Exception;
 
 my $ref_repos = cwd . '/t/data/autoqc';
@@ -18,7 +18,6 @@ SKIP: { skip 'require bammaskflags', 10, unless `which bammaskflags`;
   local $ENV{CLASSPATH} = $dir;
 
   my %h = (
-    position            => 1,
     repository          => $ref_repos,
     qc_in               => $archive_qc_path,
     tag_sets_repository => $tag_sets_repository
@@ -26,6 +25,7 @@ SKIP: { skip 'require bammaskflags', 10, unless `which bammaskflags`;
 
   my %ref = %h;
   $ref{'id_run'} = 6954;
+  $ref{'position'} = 1;
   my $r = npg_qc::autoqc::checks::upstream_tags->new(\%ref);
   isa_ok ($r, 'npg_qc::autoqc::checks::upstream_tags');
   my $result;
@@ -36,12 +36,14 @@ SKIP: { skip 'require bammaskflags', 10, unless `which bammaskflags`;
 
   %ref = %h;
   $ref{'id_run'} = 13362;
+  $ref{'position'} = 1;
   $r = npg_qc::autoqc::checks::upstream_tags->new(\%ref);
   $expected = $ref_repos . '/tag_sets/sanger168_6.tags';
   is($r->barcode_filename, $expected, 'correct barcode filename');
 
   %ref = %h;
   $ref{'id_run'} = 12920;
+  $ref{'position'} = 1;
   $r = npg_qc::autoqc::checks::upstream_tags->new(\%ref);
   $expected = $ref_repos . '/tag_sets/sanger168_7.tags';
   is($r->barcode_filename, $expected, 'correct barcode filename');
@@ -55,6 +57,12 @@ SKIP: { skip 'require bammaskflags', 10, unless `which bammaskflags`;
   $ref{'qc_in'} = $archive;
   $r = npg_qc::autoqc::checks::upstream_tags->new(\%ref);
   is($r->barcode_filename, $expected, 'correct barcode filename');
+
+  %ref = %h;
+  $ref{'rpt_list'} = '12920:1';
+  $ref{'qc_in'} = $archive;
+  $r = npg_qc::autoqc::checks::upstream_tags->new(\%ref);
+  is($r->tag0_bam_file,"$dir/lane1/12920_1#0.bam",'correct tag0 bam filename'); 
 };
 
 1;
